--- a/assets/scss/all.scss
+++ b/assets/scss/all.scss
@@ -1,5 +1,7 @@
-@import './layout/header.scss';
-@import './layout/footer.scss';
+@import 'variable.scss';
+@import 'base.scss';
+@import 'util.scss';
 
-
-@import './pages/index.scss';
+/* layout */
+@import './layout/aside.scss';
+@import './layout/nav.scss';
